--- a/paper/manuscript.Rmd
+++ b/paper/manuscript.Rmd
@@ -1,26 +1,25 @@
 ---
-title             : "The Sound of Teaching Music: Expert Pianists' Sound Modulation"
+title             : "The Sound of Teaching Music: Expert Pianists' Performance Modulations for Novices"
 shorttitle        : "The Sound of Teaching Music"
 
 author: 
   - name          : "Atsuko Tominaga"
     affiliation   : "1"
     corresponding : yes    # Define only one corresponding author
-    address       : "Postal address"
-    email         : "my@email.com"
-  - name          : "Ernst-August Doelle"
-    affiliation   : "1,2"
+    address       : "Quellenstraße 51, 1100 Vienna, Austria"
+    email         : "Tominaga_Atsuko@phd.ceu.edu"
+    
+  - name          : "Günther Knoblich"
+    affiliation   : "1"
+    
+  - name          : "Natalie Sebanz"
+    affiliation   : "1"
 
 affiliation:
   - id            : "1"
-    institution   : "Wilhelm-Wundt-University"
-  - id            : "2"
-    institution   : "Konstanz Business School"
+    institution   : "Department of Cognitive Science, Central European University"
 
 authornote: |
-  Add complete departmental affiliations for each author here. Each new line herein must be indented, like this line.
-
-  Enter author note here.
 
 abstract: |
   One or two sentences providing a **basic introduction** to the field,  comprehensible to a scientist in any discipline.
@@ -39,60 +38,103 @@ abstract: |
   
   <!-- https://tinyurl.com/ybremelq -->
   
-keywords          : "keywords"
+keywords          : "teaching, expertise, skill transmission, artistic expression, music"
 wordcount         : "X"
 
-bibliography      : ["r-references.bib"]
+bibliography      : [""]
 
-floatsintext      : no
+floatsintext      : yes
 figurelist        : no
 tablelist         : no
 footnotelist      : no
 linenumbers       : yes
 mask              : no
 draft             : no
+noextraspace      : yes
 
 documentclass     : "apa6"
 classoption       : "man"
-output            : papaja::apa6_pdf
+output:
+  papaja::apa6_pdf:
+    latex_engine: xelatex
 ---
-
 ```{r setup, include = FALSE}
-library("papaja")
+if (!require("papaja")) {install.packages("papaja"); require("papaja")}
+if (!require("here")) {install.packages("here"); require("here")}
+
+# create image folder
+if (!file.exists(here("paper/image"))){
+  dir.create(here("paper/image"))
+}
 ```
 
-```{r analysis-preferences}
-# Seed for random number generation
-set.seed(42)
-knitr::opts_chunk$set(cache.extra = knitr::rand_seed)
+# 1. Introduction
+
+# 2. Experiment 1
+
+## 2.1. Method
+```{r questionnaire-1, include = FALSE}
+source(here("experiment-1/analysis/demographics", "questionnaire.R"), chdir = TRUE)
 ```
 
+### 2.1.1. Participants
+### 2.1.2. Apparatus and stimuli
+### 2.1.3. Procedure
+### 2.1.4. Design and data analysis
 
+## 2.2. Results (Articulation)
+### 2.2.1. Interonset Intervals (IOIs)
+### 2.2.2. Key-Overlap Time (KOT)
+### 2.2.3. Key Velocity (KV)
+### 2.2.4. KV Transition Points
 
-# Methods
-We report how we determined our sample size, all data exclusions (if any), all manipulations, and all measures in the study. <!-- 21-word solution (Simmons, Nelson & Simonsohn, 2012; retrieved from http://ssrn.com/abstract=2160588) -->
+## 2.3. Results (Dynamics)
+### 2.3.1. Interonset Intervals (IOIs)
+### 2.3.2. Key Velocity (KV)
+### 2.3.3. KV Transition Points
+### 2.3.4. Key-Overlap Time (KOT)
 
-## Participants
+## 2.4. Discussion
 
-## Material
+\newpage
 
-## Procedure
+# 3. Experiment 2
+## 3.1. Method
+```{r questionnaire-2, include = FALSE}
+#source(here("experiment-2/analysis/demographics", "questionnaire.R"), chdir = TRUE)
+```
 
-## Data analysis
-We used `r cite_r("r-references.bib")` for all our analyses.
+### 3.1.1. Participants
+### 3.1.2. Apparatus and stimuli
+### 3.1.3. Procedure
+### 3.1.4. Design and data analysis
 
+## 3.2. Results (Articulation)
+### 3.2.1. Interonset Intervals (IOIs)
+### 3.2.2. Key-Overlap Time (KOT)
+### 3.2.3. Key Velocity (KV)
+### 3.2.4. KV Transition Points
 
-# Results
+## 3.3. Results (Dynamics)
+### 3.3.1. Interonset Intervals (IOIs)
+### 3.3.2. Key Velocity (KV)
+### 3.3.3. KV Transition Points
+### 3.3.4. Key-Overlap Time (KOT)
 
-# Discussion
+## 3.4. Discussion
 
+# 4. General Discussion
+
+# Acknowledgements
+We thank Dávid Csűrös for his help with data collection. This research was supported by the European Research Council under the European Union's Seventh Framework Program (FP7/2007-2013)/ERC (European Research Council) grant agreement no. 609819, SOMICS, and by ERC grant agreement no. 616072, JAXPERTISE.
+
+# Declarations of interest
+All authors have no conflict of interest.
 
 \newpage
 
 # References
-```{r create_r-references}
-r_refs(file = "r-references.bib")
-```
+
 
 \begingroup
 \setlength{\parindent}{-0.5in}
@@ -100,3 +142,4 @@ r_refs(file = "r-references.bib")
 
 <div id="refs" custom-style="Bibliography"></div>
 \endgroup
+\raggedbottom
