--- a/paper/manuscript.tex
+++ b/paper/manuscript.tex
@@ -4,7 +4,7 @@
 %
 \documentclass[
   english,
-  man]{apa6}
+  man,floatsintext]{apa6}
 \usepackage{lmodern}
 \usepackage{amssymb,amsmath}
 \usepackage{ifxetex,ifluatex}
@@ -37,9 +37,9 @@
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \IfFileExists{bookmark.sty}{\usepackage{bookmark}}{\usepackage{hyperref}}
 \hypersetup{
-  pdftitle={The Sound of Teaching Music: Expert Pianists' Sound Modulation},
+  pdftitle={The Sound of Teaching Music: Expert Pianists' Performance Modulations for Novices},
   pdflang={en-EN},
-  pdfkeywords={keywords},
+  pdfkeywords={teaching, expertise, skill transmission, artistic expression, music},
   hidelinks,
   pdfcreator={LaTeX via pandoc}}
 \urlstyle{same} % disable monospaced font for URLs
@@ -107,23 +107,14 @@
   {}{\typeout{Failed to patch abstract.}}
 \makeatother
 \shorttitle{The Sound of Teaching Music}
-\author{Atsuko Tominaga\textsuperscript{1}\ \& Ernst-August Doelle\textsuperscript{1,2}}
+\author{Atsuko Tominaga\textsuperscript{1}, Günther Knoblich\textsuperscript{1}, \& Natalie Sebanz\textsuperscript{1}}
 \affiliation{
 \vspace{0.5cm}
-\textsuperscript{1} Wilhelm-Wundt-University\\\textsuperscript{2} Konstanz Business School}
-\authornote{Add complete departmental affiliations for each author here. Each new line herein must be indented, like this line.
+\textsuperscript{1} Department of Cognitive Science, Central European University}
+\authornote{
 
-Enter author note here.
-
-
-Correspondence concerning this article should be addressed to Atsuko Tominaga, Postal address. E-mail: my@email.com}
-\keywords{keywords\newline\indent Word count: X}
-\DeclareDelayedFloatFlavor{ThreePartTable}{table}
-\DeclareDelayedFloatFlavor{lltable}{table}
-\DeclareDelayedFloatFlavor*{longtable}{table}
-\makeatletter
-\renewcommand{\efloat@iwrite}[1]{\immediate\expandafter\protected@write\csname efloat@post#1\endcsname{}}
-\makeatother
+Correspondence concerning this article should be addressed to Atsuko Tominaga, Quellenstraße 51, 1100 Vienna, Austria. E-mail: Tominaga\_Atsuko@phd.ceu.edu}
+\keywords{teaching, expertise, skill transmission, artistic expression, music\newline\indent Word count: X}
 \usepackage{lineno}
 
 \linenumbers
@@ -141,11 +132,10 @@ Correspondence concerning this article should be addressed to Atsuko Tominaga, P
 \newlength{\cslhangindent}
 \setlength{\cslhangindent}{1.5em}
 \newenvironment{cslreferences}%
-  {\setlength{\parindent}{0pt}%
-  \everypar{\setlength{\hangindent}{\cslhangindent}}\ignorespaces}%
+  {}%
   {\par}
 
-\title{The Sound of Teaching Music: Expert Pianists' Sound Modulation}
+\title{The Sound of Teaching Music: Expert Pianists' Performance Modulations for Novices}
 
 \date{}
 
@@ -168,30 +158,125 @@ Two or three sentences to provide a \textbf{broader perspective}, readily compre
 \begin{document}
 \maketitle
 
-\hypertarget{methods}{%
-\section{Methods}\label{methods}}
+\hypertarget{introduction}{%
+\section{1. Introduction}\label{introduction}}
 
-We report how we determined our sample size, all data exclusions (if any), all manipulations, and all measures in the study.
+\hypertarget{experiment-1}{%
+\section{2. Experiment 1}\label{experiment-1}}
+
+\hypertarget{method}{%
+\subsection{2.1. Method}\label{method}}
 
 \hypertarget{participants}{%
-\subsection{Participants}\label{participants}}
+\subsubsection{2.1.1. Participants}\label{participants}}
 
-\hypertarget{material}{%
-\subsection{Material}\label{material}}
+\hypertarget{apparatus-and-stimuli}{%
+\subsubsection{2.1.2. Apparatus and stimuli}\label{apparatus-and-stimuli}}
 
 \hypertarget{procedure}{%
-\subsection{Procedure}\label{procedure}}
+\subsubsection{2.1.3. Procedure}\label{procedure}}
 
-\hypertarget{data-analysis}{%
-\subsection{Data analysis}\label{data-analysis}}
+\hypertarget{design-and-data-analysis}{%
+\subsubsection{2.1.4. Design and data analysis}\label{design-and-data-analysis}}
 
-We used R (Version 3.6.3; R Core Team, 2020) for all our analyses.
+\hypertarget{results-articulation}{%
+\subsection{2.2. Results (Articulation)}\label{results-articulation}}
 
-\hypertarget{results}{%
-\section{Results}\label{results}}
+\hypertarget{interonset-intervals-iois}{%
+\subsubsection{2.2.1. Interonset Intervals (IOIs)}\label{interonset-intervals-iois}}
+
+\hypertarget{key-overlap-time-kot}{%
+\subsubsection{2.2.2. Key-Overlap Time (KOT)}\label{key-overlap-time-kot}}
+
+\hypertarget{key-velocity-kv}{%
+\subsubsection{2.2.3. Key Velocity (KV)}\label{key-velocity-kv}}
+
+\hypertarget{kv-transition-points}{%
+\subsubsection{2.2.4. KV Transition Points}\label{kv-transition-points}}
+
+\hypertarget{results-dynamics}{%
+\subsection{2.3. Results (Dynamics)}\label{results-dynamics}}
+
+\hypertarget{interonset-intervals-iois-1}{%
+\subsubsection{2.3.1. Interonset Intervals (IOIs)}\label{interonset-intervals-iois-1}}
+
+\hypertarget{key-velocity-kv-1}{%
+\subsubsection{2.3.2. Key Velocity (KV)}\label{key-velocity-kv-1}}
+
+\hypertarget{kv-transition-points-1}{%
+\subsubsection{2.3.3. KV Transition Points}\label{kv-transition-points-1}}
+
+\hypertarget{key-overlap-time-kot-1}{%
+\subsubsection{2.3.4. Key-Overlap Time (KOT)}\label{key-overlap-time-kot-1}}
 
 \hypertarget{discussion}{%
-\section{Discussion}\label{discussion}}
+\subsection{2.4. Discussion}\label{discussion}}
+
+\newpage
+
+\hypertarget{experiment-2}{%
+\section{3. Experiment 2}\label{experiment-2}}
+
+\hypertarget{method-1}{%
+\subsection{3.1. Method}\label{method-1}}
+
+\hypertarget{participants-1}{%
+\subsubsection{3.1.1. Participants}\label{participants-1}}
+
+\hypertarget{apparatus-and-stimuli-1}{%
+\subsubsection{3.1.2. Apparatus and stimuli}\label{apparatus-and-stimuli-1}}
+
+\hypertarget{procedure-1}{%
+\subsubsection{3.1.3. Procedure}\label{procedure-1}}
+
+\hypertarget{design-and-data-analysis-1}{%
+\subsubsection{3.1.4. Design and data analysis}\label{design-and-data-analysis-1}}
+
+\hypertarget{results-articulation-1}{%
+\subsection{3.2. Results (Articulation)}\label{results-articulation-1}}
+
+\hypertarget{interonset-intervals-iois-2}{%
+\subsubsection{3.2.1. Interonset Intervals (IOIs)}\label{interonset-intervals-iois-2}}
+
+\hypertarget{key-overlap-time-kot-2}{%
+\subsubsection{3.2.2. Key-Overlap Time (KOT)}\label{key-overlap-time-kot-2}}
+
+\hypertarget{key-velocity-kv-2}{%
+\subsubsection{3.2.3. Key Velocity (KV)}\label{key-velocity-kv-2}}
+
+\hypertarget{kv-transition-points-2}{%
+\subsubsection{3.2.4. KV Transition Points}\label{kv-transition-points-2}}
+
+\hypertarget{results-dynamics-1}{%
+\subsection{3.3. Results (Dynamics)}\label{results-dynamics-1}}
+
+\hypertarget{interonset-intervals-iois-3}{%
+\subsubsection{3.3.1. Interonset Intervals (IOIs)}\label{interonset-intervals-iois-3}}
+
+\hypertarget{key-velocity-kv-3}{%
+\subsubsection{3.3.2. Key Velocity (KV)}\label{key-velocity-kv-3}}
+
+\hypertarget{kv-transition-points-3}{%
+\subsubsection{3.3.3. KV Transition Points}\label{kv-transition-points-3}}
+
+\hypertarget{key-overlap-time-kot-3}{%
+\subsubsection{3.3.4. Key-Overlap Time (KOT)}\label{key-overlap-time-kot-3}}
+
+\hypertarget{discussion-1}{%
+\subsection{3.4. Discussion}\label{discussion-1}}
+
+\hypertarget{general-discussion}{%
+\section{4. General Discussion}\label{general-discussion}}
+
+\hypertarget{acknowledgements}{%
+\section{Acknowledgements}\label{acknowledgements}}
+
+We thank Dávid Csűrös for his help with data collection. This research was supported by the European Research Council under the European Union's Seventh Framework Program (FP7/2007-2013)/ERC (European Research Council) grant agreement no. 609819, SOMICS, and by ERC grant agreement no. 616072, JAXPERTISE.
+
+\hypertarget{declarations-of-interest}{%
+\section{Declarations of interest}\label{declarations-of-interest}}
+
+All authors have no conflict of interest.
 
 \newpage
 
@@ -204,10 +289,9 @@ We used R (Version 3.6.3; R Core Team, 2020) for all our analyses.
 
 \hypertarget{refs}{}
 \begin{cslreferences}
-\leavevmode\hypertarget{ref-R-base}{}%
-R Core Team. (2020). \emph{R: A language and environment for statistical computing}. Vienna, Austria: R Foundation for Statistical Computing. Retrieved from \url{https://www.R-project.org/}
 \end{cslreferences}
 
 \endgroup
+\raggedbottom
 
 \end{document}
