--- a/paper/manuscript.tex
+++ b/paper/manuscript.tex
@@ -170,14 +170,38 @@ Two or three sentences to provide a \textbf{broader perspective}, readily compre
 \hypertarget{participants}{%
 \subsubsection{2.1.1. Participants}\label{participants}}
 
+We recruited 36 piano experts who played the piano for at least the past 10 years or were studying piano performance at a music school at the time of recruitment. For data analysis, we excluded 5 participants due to an experimental error (3), an overall deviated tempo (2). Thirty-one participants (15 female) were included in data analysis. They had 12.45 years of practice on average (\emph{SD} = 5.66). All participants gave their informed consent before the experiment started and received vouchers for their participation. The study was approved by the United Ethical REview Committee for Research in Psychology (EPKEB) in Hungary.
+
 \hypertarget{apparatus-and-stimuli}{%
 \subsubsection{2.1.2. Apparatus and stimuli}\label{apparatus-and-stimuli}}
+
+A weighted Yamaha MIDI digital piano was used to record participants' performance via Max/MSP on a MacBook Pro with MacOS X Mojave 10.14.3. The laptop and piano were connected to a high-fidelity soundcard (Focusrite Scarlett 6i6) to deliver a metronome and piano sound. All auditory feedback was given to participants through headphones (Audio-Technica ATH-M50X). Sheet music was displayed on a computer monitor in front of the participants. The pitch, onset and offset time of each note, and key velocity profiles were obtained from MIDI data using Max/MSP patchers.
+
+One musical excerpt was used as a stimulus. The excerpt was taken from ``A Dozen a Day - Play with Ease in Many Keys" by Edna-Mae Brunam and modified for the experiment. It consisted of a 6-measure isochronous melody noted in 4/4 meter. The stimulus was composed in C major to be played with the right hand only. Non-expressive sheet music (i.e., sheet music without musical expression; see \emph{Figure \ref{fig:stimuli}, A}) was used for the purpose of practice. Expressive notations were added to the non-expressive sheet music for the experiment. They referred to either articulation or dynamics (\emph{Figure \ref{fig:stimuli}, B-C}). Articulation was notated as either legato or staccato. Legato indicates that musical notes are to be connected and should sound smooth. Staccato requires producing musical notes with shortened duration, keeping them separate from each other. Dynamics was notated in terms of forte and piano. Forte indicates that musical notes should be played loudly whereas piano indicates that musical notes should be played softly. The notation did not include any indication of fingering (i.e., the positioning of the fingers when playing the piano) because the piece was simple and pilot testing had shown that specifying fingering was not required.
 
 \hypertarget{procedure}{%
 \subsubsection{2.1.3. Procedure}\label{procedure}}
 
+In order to ensure that participants had sufficient motor skills to perform the piece, we asked them to practise the piece with the non-expressive sheet music (\emph{Figure \ref{fig:stimuli}, A}). Once they could perform the piece without pitch errors twice consecutively, the experiment started.
+
+First, participants were allocated to either the teaching or performing condition and asked to practise the excerpt the excerpt with notated expressions of either articulation or dynamics (\emph{Figure \ref{fig:stimuli}, B-C}). As soon as they had produced the excerpt with notated expressions without pitch errors twice consecutively, the test trials began.
+
+In the teaching condition, participants were instructed to play the excerpt of music as if they were teaching it to students. It was mentioned that the students already knew the sequence of the tones and that they were trying to learn how to perform the piece with notated expressions by listening to the participant's performance. In the performing condition, participants were asked to play the excerpt of music as if they were performing it to an audience. Participants played the piece 8 times per expressive technique per condition, so there were 32 trials in total (2 conditions x 2 expressive techniques x 8 trials). The order of the conditions was counterbalanced across participants. The order of the expressive techniques within each condition was also counterbalanced across participants. A leading metronome (80 beats per minute, 8 beats) indicated the target tempo before each trial.
+
+At the end of the experiment, participants filled in a questionnaire asking about their demographic information and experience in piano performance/teaching.
+
 \hypertarget{design-and-data-analysis}{%
 \subsubsection{2.1.4. Design and data analysis}\label{design-and-data-analysis}}
+
+The experiment had two factors; Condition (teaching vs.~performing) and Expressive Technique (articulation vs.~dynamics). Additionally, the factor Subcomponent was used when analysing data for each subcomponent for each technique separately (i.e., LS; legato vs.~staccato, FP; forte vs.~piano).
+
+Three dependent variables were computed for data analysis. Interonset intervals (IOIs) are the intervals between onsets of adjacent notes and provide a tempo of tempo. Key-overlap time (KOT) is the difference between the offset time of the current tone (i.e., key release time) and the onset time of the ensuing tone and measures the smoothness of musical sequences (CITE). A positive value indicates smooth legato styles due to overlap between the current and ensuing tone whereas a negative value indicates sharp staccato styles due to separation between the current and ensuing tone. Tone intensity is assessed by key velocity (KV) and measures the loudness of a musical note. The value of KV in MIDI varies between 0 (minimum) and 127 (maximum).
+
+Pitch errors were identified by comparing the participants' performance with the sheet music. (TBC)
+
+\begin{figure}
+\includegraphics[width=1\linewidth]{manuscript_files/figure-latex/stim-1-1} \caption{\label{fig:stimuli}(A)Non-expressive sheet music. (B)Articulation. The curved line (slur) indicates legato and the dots indicate staccato. (C)Dynamics. The symbol `f' denotes forte and the symbol `p' denotes piano. For data analysis, only the 16th notes were included.}\label{fig:stim-1}
+\end{figure}
 
 \hypertarget{results-articulation}{%
 \subsection{2.2. Results (Articulation)}\label{results-articulation}}
@@ -223,14 +247,22 @@ Two or three sentences to provide a \textbf{broader perspective}, readily compre
 \hypertarget{participants-1}{%
 \subsubsection{3.1.1. Participants}\label{participants-1}}
 
+We recruited 21 piano experts who already had a degree in (above bachelor or equivalent) in piano performance/teaching or were studying piano performance at a music school at the time of recruitment. One participant was excluded due to insufficient motor skills. Twenty participants (9 female) were included in data analysis. They had 15.65 years of practice on average (\emph{SD} = 5.67).
+
 \hypertarget{apparatus-and-stimuli-1}{%
 \subsubsection{3.1.2. Apparatus and stimuli}\label{apparatus-and-stimuli-1}}
+
+The same apparatus as Experiment 1 was used. We selected Clementi's Sonatina Op.36 (No.3) in C major as a stimulus because it contained our targeted expression (i.e., articulation, dynamics) and relatively simple in terms of motor skills. The first 12 measures of the original piece and modified it so that it had the most equal number of data points for each dependent variable (see details in \emph{\protect\hyperlink{analysis-2}{Data analysis}}). The stimulus consisted of a 12-measure isochronous melody notated in 4/4 meter. Only the right hand was used to play. Non-expressive sheet was used for the purpose of practice (\emph{Figure \ref{fig:stimuli-2}, A}). Expressive notations were added to the non-expressive sheet music for the experiment (\emph{Figure \ref{fig:stimuli-2}, B-C}). These excerpts were confirmed to be musically natural by a doctoral student in piano performance at Liszt Ferenc Academy of Music in Hungary. The fingering was also assigned and confirmed by the same doctoral student.
 
 \hypertarget{procedure-1}{%
 \subsubsection{3.1.3. Procedure}\label{procedure-1}}
 
 \hypertarget{design-and-data-analysis-1}{%
 \subsubsection{3.1.4. Design and data analysis}\label{design-and-data-analysis-1}}
+
+\begin{figure}
+\includegraphics[width=1\linewidth]{manuscript_files/figure-latex/stim-2-1} \caption{\label{fig:stimuli-2}(A)Non-expressive sheet music. (B)Articulation. The curved line (slur) indicates legato and the dots indicate staccato. (C)Dynamics. The symbol `f' denotes forte and the symbol `p' denotes piano. For data analysis, only the 16th notes were included.}\label{fig:stim-2}
+\end{figure}
 
 \hypertarget{results-articulation-1}{%
 \subsection{3.2. Results (Articulation)}\label{results-articulation-1}}
@@ -264,6 +296,8 @@ Two or three sentences to provide a \textbf{broader perspective}, readily compre
 
 \hypertarget{discussion-1}{%
 \subsection{3.4. Discussion}\label{discussion-1}}
+
+\newpage
 
 \hypertarget{general-discussion}{%
 \section{4. General Discussion}\label{general-discussion}}
